<resources>
    <string name="app_name">Image Machine</string>

    <string name="app_title">IMAGE\nMACHINE</string>
    <string name="app_description">This is an example app for testing purpose only. If you have any question you can hit me at \ndroid.septianen@gmail.com</string>

    <string name="code_reader">Code Reader</string>
    <string name="machine_data">Machine Data</string>
    <string name="machine_id">Machine ID</string>
    <string name="machine_name">Machine Name</string>
    <string name="machine_type">Machine Type</string>
    <string name="machine_number">Machine QR Code Number</string>
    <string name="machine_date">Last Maintenance Date</string>

    <string name="hint_machine_name">Name</string>
    <string name="hint_machine_type">Type</string>
    <string name="hint_machine_number">123456789</string>
    <string name="hint_machine_date">01/01/2023</string>

    <string name="machine_image">Machine Image</string>
    <string name="delete_image">Delete Image</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="leave">Leave</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>

    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>

    <string name="category">Category</string>
    <string name="sort_by">Sort By</string>
    <string name="sort">Sort</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>