<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/white"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/baseline_close_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/category"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/iv_close"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <RadioGroup
                android:id="@+id/rg_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/tv_category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <RadioButton
                    android:id="@+id/rb_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/machine_name"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioButton
                    android:id="@+id/rb_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/machine_type"
                    app:layout_constraintTop_toTopOf="parent" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/sort_by"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/rg_category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <RadioGroup
                android:id="@+id/rg_sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/tv_sort"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <RadioButton
                    android:id="@+id/rb_ascending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/ascending"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioButton
                    android:id="@+id/rb_descending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descending"
                    app:layout_constraintTop_toTopOf="parent" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/sort"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/rg_sort"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>