<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".view.MachineDetailFragment">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="24dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/iv_delete"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="24dp"
        android:src="@drawable/baseline_delete_outline_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_back"
        app:layout_constraintBottom_toTopOf="@+id/btn_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/machine_id"
                android:enabled="false"
                app:expandedHintEnabled="false"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_machine_name"
                    android:enabled="false"
                    android:textSize="14sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/machine_name"
                app:expandedHintEnabled="false"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_machine_name"
                    android:maxLines="50"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    android:textSize="14sp"
                    android:textColor="@color/default_font"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/machine_type"
                app:expandedHintEnabled="false"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_machine_type"
                    android:maxLength="50"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    android:textColor="@color/default_font"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/machine_number"
                app:expandedHintEnabled="false"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_machine_number"
                    android:inputType="number"
                    android:maxLength="50"
                    android:imeOptions="actionDone"
                    android:textSize="14sp"
                    android:textColor="@color/default_font"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/machine_date"
                app:expandedHintEnabled="false"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_date"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/hint_machine_date"
                    android:inputType="none"
                    app:endIconDrawable="@drawable/baseline_calendar_today_24"
                    android:textSize="14sp"
                    android:textColor="@color/default_font"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:backgroundTint="@color/primary"
        android:text="@string/machine_image"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_done"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:backgroundTint="@color/primary"
        android:src="@drawable/baseline_done_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>